--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,9 @@
   box-sizing: border-box;
 }
 
-body {
-  min-height: 100vh;
-  margin-bottom: 50px;
-  clear: both;
+html{
+  height: 100%;
 }
-
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
